--- a/home.html
+++ b/home.html
@@ -445,6 +445,7 @@
 			<!-- <div class="rotate-radio"></div>
 			<div class="light"></div> -->
 			<div class="arrow-box"></div>
+			<div class="arrow-mask"></div>
 		</div>
 		<p class="point right-point" id="right-point">数据服务</p>
 	</footer>
