--- a/home.html
+++ b/home.html
@@ -134,41 +134,14 @@
 				</li>
 			</ul>
 		</div>
-		<!-- <div class="tooltip left-tooltip">
-			<div class="tooltip-top"></div>
-			<div class="tooltip-center">
-				<div class="tool-titie">
-					<span class="title-icon no-update"></span>
-					<span class="font">数据交换异常</span>
-				</div>
-				<p class="tool-info">异常时间：2019-04-09 14:00</p>
-				<p class="tool-info">未警告
-					<span class="sendMess">点击发送信息</span>
-				</p>
-				<a href="#">
-					<div class="tool-btn">查看告警记录</div>
-				</a>
-			</div>
-			<div class="tool-bottom"></div>
-		</div> -->
+
 		<!-- 左边线条组合 -->
 		<div class="line-list ">
 			<!-- 绘制光点随着曲线移动  模块 start-->
 			<div class="quadratic-curve-box  quadratic-curve-box-left">
 				<canvas class="quadratic-curve" id="canvas" width=142 height=650></canvas>
 				<div class="lignt-box lignt-box-left" id="lignt-box">
-					<!-- <span class="line-icon"></span>
-					<span class="line-icon"></span>
-					<span class="line-icon"></span>
-					<span class="line-icon"></span>
-					<span class="line-icon"></span>
-					<span class="line-icon"></span>
-					<span class="line-icon"></span>
-					<span class="line-icon"></span>
-					<span class="line-icon"></span>
-					<span class="line-icon"></span> -->
 				</div>
-
 			</div>
 			<!-- 绘制光点随着曲线移动  模块 end-->
 		</div>
@@ -290,67 +263,72 @@
 
 				</div>
 				<!-- 中间底部 -->
-
-				<div class="center-bottom">
-					<ol class="city-data-list">
-						<li class="city-data-li">
-							<div class="up-icon"></div>
-							<div class="list-item">
-								<p class="item-num">12681</p>
-								<p class="name">成都市</p>
-							</div>
-						</li>
-						<li class="city-data-li">
-							<div class="up-icon"></div>
-							<div class="list-item">
-								<p class="item-num">12681</p>
-								<p class="name">德阳市</p>
-							</div>
-						</li>
-						<li class="city-data-li">
-							<div class="up-icon"></div>
-							<div class="list-item">
-								<p class="item-num">12681</p>
-								<p class="name">绵阳市</p>
-							</div>
-						</li>
-						<li class="city-data-li">
-							<div class="up-icon"></div>
-							<div class="list-item">
-								<p class="item-num">12681</p>
-								<p class="name">宜宾市</p>
-							</div>
-						</li>
-						<li class="city-data-li">
-							<div class="up-icon"></div>
-							<div class="list-item">
-								<p class="item-num">12681</p>
-								<p class="name">广元市</p>
-							</div>
-						</li>
-						<li class="city-data-li">
-							<div class="up-icon"></div>
-							<div class="list-item">
-								<p class="item-num">12681</p>
-								<p class="name">泸州市</p>
-							</div>
-						</li>
-						<li class="city-data-li">
-							<div class="up-icon"></div>
-							<div class="list-item">
-								<p class="item-num">12681</p>
-								<p class="name">广安市</p>
-							</div>
-						</li>
-						<li class="city-data-li">
-							<div class="up-icon"></div>
-							<div class="list-item">
-								<p class="item-num">12681</p>
-								<p class="name">南充市</p>
-							</div>
-						</li>
-					</ol>
+                <div class="bottom-box flex-block">
+					<button class="prevButton"></button>
+				
+					<div class="center-bottom">
+						<ol class="city-data-list">
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">成都市</p>
+								</div>
+							</li>
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">德阳市</p>
+								</div>
+							</li>
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">绵阳市</p>
+								</div>
+							</li>
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">宜宾市</p>
+								</div>
+							</li>
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">广元市</p>
+								</div>
+							</li>
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">泸州市</p>
+								</div>
+							</li>
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">广安市</p>
+								</div>
+							</li>
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">南充市</p>
+								</div>
+							</li>
+						</ol>
+					</div>
+					<button class="nextButton"></button>
 				</div>
+				
 			</div>
 		</div>
 		
