第3次修改完成

--- a/home.html
+++ b/home.html
@@ -64,11 +64,12 @@
 		</div> -->
 		<div class="legend-list flex-block">
 			<div class="legend-li flex1">
-				<span class="warn-icon"></span>
+				<span class="no-update-icon"></span>
+
 				<span class="font">交换正常生产库数据未更新</span>
 			</div>
 			<div class="legend-li">
-				<span class="no-update-icon"></span>
+				<span class="warn-icon"></span>
 				<span class="font">数据交换异常</span>
 			</div>
 		</div>
@@ -83,10 +84,11 @@
 		<!-- 左列表 -->
 		<div class="list-box left-box">
 			<div class="list-header flex-block">
-				<div class="flex1">业务数据</div> 
+				<div class="flex1">业务数据</div>
 				<a href="#">
 					<div class="more-box ">
-					 更多<span class="more"></span>
+						更多
+						<span class="more"></span>
 					</div>
 				</a>
 			</div>
@@ -263,9 +265,9 @@
 
 				</div>
 				<!-- 中间底部 -->
-                <div class="bottom-box flex-block">
-					<button class="prevButton"></button>
-				
+				<div class="bottom-box flex-block">
+					<div class="prevButton "></div>
+
 					<div class="center-bottom">
 						<ol class="city-data-list">
 							<li class="city-data-li">
@@ -324,14 +326,49 @@
 									<p class="name">南充市</p>
 								</div>
 							</li>
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">宜宾市</p>
+								</div>
+							</li>
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">广元市</p>
+								</div>
+							</li>
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">南充市</p>
+								</div>
+							</li>
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">宜宾市</p>
+								</div>
+							</li>
+							<li class="city-data-li">
+								<div class="up-icon"></div>
+								<div class="list-item">
+									<p class="item-num">12681</p>
+									<p class="name">广元市</p>
+								</div>
+							</li>
 						</ol>
 					</div>
-					<button class="nextButton"></button>
+					<div class="nextButton"></div>
 				</div>
-				
+
 			</div>
 		</div>
-		
+
 		<div class="tooltip right-tooltip show">
 			<div class="tooltip-top"></div>
 			<div class="tooltip-center">
