--- a/home.html
+++ b/home.html
@@ -4,9 +4,8 @@
 <head>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge" charset="utf-8">
-	<title>内蒙古自治区生态环境大数据管理平台</title>
+	<title>生态环境大数据平台</title>
 	<link rel="stylesheet" href="css/common.css" />
-	<link rel="stylesheet" href="./css/jquery.mCustomScrollbar.css">
 	<link rel="stylesheet" href="css/home.css" />
 	<script type="text/javascript" src="./js/jquery.min.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
@@ -20,7 +19,7 @@
 	</script>
 	<header class="header">
 		<p class="logo">
-			<img src="./images/home/logo.png" />内蒙古自治区生态环境大数据管理平台
+			<img src="./images/home/logo.png" />生态环境大数据平台
 		</p>
 		<!-- 头部导航 -->
 		<div class="nav">
@@ -466,7 +465,6 @@
 	</footer>
 
 	<script type="text/javascript" src="./js/roll_translate.js"></script>
-	<script type="text/javascript" src="./js/jquery.mCustomScrollbar.concat.min.js"></script>
 	<script type="text/javascript" src="./js/home.js"></script>
 </body>
 
